파일 관련 기능 interface화
확장자 추출 및 읽기 쓰기
base interface 를 만들고 txt, csv를 위한 basic File 구현체를 만듬.

jdk 13이상에서 지원하는 toList로 변경